feat: implement error handling

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -10,5 +10,6 @@
   "user_register_success": "User register successfully",
   "user_register_fail": "User register failed",
   "account_activation_failure": "This account is either activate or the token is invalid",
-  "account_activation_success": "Account activated successfully"
+  "account_activation_success": "Account activated successfully",
+  "default_error_message": "Occurs an error, try again please"
 }
