--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -15,5 +15,6 @@
   "validation_failure": "Error en la validación",
   "authentication_failure": "Credenciales invalidas",
   "inactive_authentication_failure": "La cuenta esta inactiva",
-  "user_not_found": "El usuario no existe"
+  "user_not_found": "El usuario no existe",
+  "unauthroized_user_update": "You are not authorized to update user"
 }
